Removed unused route for setting title
