# server/docs/swagger.json
@@ -517,71 +517,6 @@
             "$ref": "#/components/responses/ForbiddenOrMissing"
           }
         }
-      },
-      "put": {
-        "tags": [
-          "Documents"
-        ],
-        "summary": "Save document title.",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "description": "Document universally unique identifier",
-            "in": "path",
-            "name": "documentUuid",
-            "schema": {
-              "type": "string",
-              "example": "4617bc72-686e-4090-9722-a136509d7ab8"
-            },
-            "required": true
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "title": {
-                    "type": "string",
-                    "example": "A new title"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "success": {
-                      "type": "boolean",
-                      "example": true
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "$ref": "#/components/responses/NotAuthorized"
-          },
-          "403": {
-            "$ref": "#/components/responses/ForbiddenOrMissing"
-          },
-          "423": {
-            "$ref": "#/components/responses/AcquireLock"
-          }
-        }
       }
     },
     "/documents/{documentUuid}/content": {
